# crane-framework

./: .gitignore  .gitmodules  CMakeLists.txt  README.en.md  README.md  README_en.md  crane-env-pre.sh
docker/: Dockerfile
src/app/: CMakeLists.txt
src/app/src/: crane_plugin_create_and_destory.cpp  crane_plugin_create_singleton.cpp  crane_plugin_http_server.cpp  crane_plugin_python_interface.py  img.cpp  main.cpp
src/crane/: CMakeLists.txt
src/crane/common/: CMakeLists.txt
src/crane/common/inc/: AbsPluginFactory.h  ConcurrentHashMap.h  ConcurrentPriorityQueue.h  ConcurrentQueue.h  Config.h  Log.h  PluginBaseInterface.h  PluginSwappable.h  Util.h  Wrapper.h  common.h  craneMacro.h
src/crane/common/src/: AbsPluginFactory.cpp  Config.cpp  Log.cpp  Util.cpp
src/crane/craneAdapter/: CMakeLists.txt
src/crane/craneAdapter/inc/: AbsPluginFrame.h  PluginSysAdapter.h
src/crane/craneAdapter/src/: AbsPluginFrame.cpp  PluginSysAdapter.cpp
src/crane/craneCore/: CMakeLists.txt
src/crane/craneCore/inc/: AbsInterfaceInfo.h  AbsLibrary.h  AbsRegistry.h  CraneRegistry.h  DlLibrary.h  PluginInterfaceInfo.h  Wrapper.h
src/crane/craneCore/src/: AbsInterfaceInfo.cpp  CraneRegistry.cpp  DlLibrary.cpp  PluginInterfaceInfo.cpp
src/crane/craneMep/: CMakeLists.txt
src/crane/craneMep/inc/: AbsMediator.h  AbsMepService.h  MepMediator.h  MepServerProcess.h  MepServiceDiscover.h  MepServiceReady.h  MepServiceRegister.h  MepServiceRoute.h  MepServiceSubscriber.h
src/crane/craneMep/src/: AbsMepService.cpp  MepMediator.cpp  MepServerProcess.cpp  MepServiceDiscover.cpp  MepServiceReady.cpp  MepServiceRegister.cpp  MepServiceRoute.cpp  MepServiceSubscriber.cpp
src/crane/cranePlugins/disruptor/: CMakeLists.txt
src/crane/cranePlugins/disruptor/inc/: CraneDisruptor.h  CraneDisruptorEvent.h  ICraneDisruptor.h
src/crane/cranePlugins/disruptor/src/: CraneDisruptor.cpp
src/crane/cranePlugins/mep/: CMakeLists.txt
src/crane/cranePlugins/mep/inc/: AbsMediator.h  AbsMepService.h  CraneMep.h  CraneMepInterface.h  MepMediator.h  MepServerProcess.h  MepServiceDiscover.h  MepServiceReady.h  MepServiceRegister.h  MepServiceRoute.h  MepServiceSubscriber.h
src/crane/cranePlugins/mep/src/: AbsMepService.cpp  CraneMep.cpp  MepMediator.cpp  MepServerProcess.cpp  MepServiceDiscover.cpp  MepServiceReady.cpp  MepServiceRegister.cpp  MepServiceRoute.cpp  MepServiceSubscriber.cpp
src/crane/cranePlugins/msg/: CMakeLists.txt
src/crane/cranePlugins/msg/inc/: CraneMsg.h  CraneMsgCenter.h  CraneMsgCenterInterface.h  CraneMsgCenterPlugin.h  CraneMsgImpi.h  CraneObserver.h  CraneObserverImpi.h  CraneTopic.h
src/crane/cranePlugins/msg/src/: CraneMsg.cpp  CraneMsgCenter.cpp  CraneObserver.cpp
src/crane/cranePlugins/srv/: CMakeLists.txt
src/crane/cranePlugins/srv/inc/: CraneSrv.h  CraneSrvInterface.h
src/crane/cranePlugins/srv/src/: CraneSrv.cpp
src/crane/craneServer/: CMakeLists.txt
src/crane/craneServer/inc/: Data.h  ImgData.h  RestServer.h  restServerProcess.h
src/crane/craneServer/src/: Data.cpp  RestServer.cpp  restServerProcess.cpp
src/crane/craneSwig/: CMakeLists.txt  crane4py.i  setup.py.in
src/crane/craneWrapper/: CMakeLists.txt
src/crane/craneWrapper/inc/: wrapper4c.h  wrapper4py.h
src/crane/craneWrapper/src/: wrapper4c.cpp  wrapper4py.cpp
src/crane/gstFacade/: CMakeLists.txt
src/crane/gstFacade/inc/: GstFacade.h
src/crane/gstFacade/src/: GstFacade.cpp
src/inc/: crane.h  cranePlugin.h
src/plugins/crane/fetchImgInfo/: CMakeLists.txt
src/plugins/crane/fetchImgInfo/inc/: fetchImgInfo.h  fetchInfoInterface.h
src/plugins/crane/fetchImgInfo/src/: fetchImgInfo.cpp
src/plugins/crane/playcd/cpp/: CMakeLists.txt
src/plugins/crane/playcd/cpp/inc/: playImplCD.h  playerInterface.h
src/plugins/crane/playcd/cpp/src/: playerImplCD.cpp
src/plugins/crane/playcd/swig/: CMakeLists.txt  playcd.i  setup.py.in
src/plugins/crane/playcd/wrap/: CMakeLists.txt
src/plugins/crane/playcd/wrap/inc/: wrapplaycd.h
src/plugins/crane/playcd/wrap/src/: wrapplaycd.cpp
src/plugins/crane/playmp3/cpp/: CMakeLists.txt
src/plugins/crane/playmp3/cpp/inc/: playImplMP3.h
src/plugins/crane/playmp3/cpp/src/: playerImplMP3.cpp
src/plugins/crane/singleton/: CMakeLists.txt
src/plugins/crane/singleton/inc/: singletonImpl.h  singletonInterface.h
src/plugins/crane/singleton/src/: singletonImpl.cpp
src/plugins/crane/swappable/: CMakeLists.txt
src/plugins/crane/swappable/car/inc/: vehicleImplCar.h
src/plugins/crane/swappable/car/src/: vehicleImplCar.cpp
src/plugins/crane/swappable/inc/: vehicle.h
src/plugins/crane/swappable/trunck/inc/: vehicleImplTrunck.h
src/plugins/crane/swappable/trunck/src/: vehicleImplTrunck.cpp
src/plugins/gst/: Makefile.am  autogen.sh  config.status  configure  configure.lineno  libtool  meson.build
src/plugins/gst/src/: Makefile.am  gstaudiofilter.c  gstmyfilter.c  gstmyfilter.h  gstplugin.c  gsttransform.c
tests/: CMakeLists.txt  coreTest.cpp  disruptorTest.cpp  jsontest.cpp  mepTest.cpp  msgCenterTest.cpp  pluginInstMgntTest.cpp  resttest.cpp  srvTest.cpp  swapTest.cpp  wrapperTest.cpp
tests/certs/: client.crt  client.key  intermediateCA.crt  intermediateCA.key  new-certs.sh  rootCA.crt  rootCA.key  server.crt  server.key  server_from_intermediate.crt  server_from_intermediate.key  server_from_intermediate_with_chain.crt
tests/crane-cnf/: .crane.cnf  .crane_cache  .crane_plugin_mep.cnf  .crane_plugin_srv.cnf  .profile
